--- a/TP-DAS/TP-DAS/GUI.csproj
+++ b/TP-DAS/TP-DAS/GUI.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>GUI.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,14 +49,48 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="CU1.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CU1.Designer.cs">
+      <DependentUpon>CU1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Clinica.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Clinica.Designer.cs">
+      <DependentUpon>Clinica.cs</DependentUpon>
     </Compile>
-    <Compile Include="Clinica.cs" />
+    <Compile Include="CU2.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CU3.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Paciente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Paciente.Designer.cs">
+      <DependentUpon>Paciente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextBoxExtension.cs" />
+    <EmbeddedResource Include="Clinica.resx">
+      <DependentUpon>Clinica.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CU1.resx">
+      <DependentUpon>CU1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CU2.resx">
+      <DependentUpon>CU2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CU3.resx">
+      <DependentUpon>CU3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Paciente.resx">
+      <DependentUpon>Paciente.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
