--- a/TP-DAS/BLL/BLL.csproj
+++ b/TP-DAS/BLL/BLL.csproj
@@ -41,8 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Especialidad.cs" />
+    <Compile Include="Medico.cs" />
+    <Compile Include="ObraSocial.cs" />
+    <Compile Include="Paciente.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Turno.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BE\BE.csproj">
