--- a/TP-DAS/TP-DAS/GUI.csproj
+++ b/TP-DAS/TP-DAS/GUI.csproj
@@ -76,11 +76,23 @@
     <Compile Include="CU3.Designer.cs">
       <DependentUpon>CU3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Especialidad.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Especialidad.Designer.cs">
+      <DependentUpon>Especialidad.cs</DependentUpon>
+    </Compile>
     <Compile Include="Medico.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Medico.Designer.cs">
       <DependentUpon>Medico.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Obra Social.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Obra Social.Designer.cs">
+      <DependentUpon>Obra Social.cs</DependentUpon>
     </Compile>
     <Compile Include="Paciente.cs">
       <SubType>Form</SubType>
@@ -91,6 +103,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextBoxExtension.cs" />
+    <Compile Include="Turno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Turno.Designer.cs">
+      <DependentUpon>Turno.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Clinica.resx">
       <DependentUpon>Clinica.cs</DependentUpon>
     </EmbeddedResource>
@@ -106,8 +124,14 @@
     <EmbeddedResource Include="CU3.resx">
       <DependentUpon>CU3.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Especialidad.resx">
+      <DependentUpon>Especialidad.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Medico.resx">
       <DependentUpon>Medico.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Obra Social.resx">
+      <DependentUpon>Obra Social.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Paciente.resx">
       <DependentUpon>Paciente.cs</DependentUpon>
