--- a/TP-DAS/BLL/BLL.csproj
+++ b/TP-DAS/BLL/BLL.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Turno.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BE\BE.csproj">
