--- a/TP-DAS/TP-DAS/GUI.csproj
+++ b/TP-DAS/TP-DAS/GUI.csproj
@@ -82,11 +82,29 @@
     <Compile Include="CU3.Designer.cs">
       <DependentUpon>CU3.cs</DependentUpon>
     </Compile>
+    <Compile Include="CUEmail.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CUEmail.Designer.cs">
+      <DependentUpon>CUEmail.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CUPass.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CUPass.Designer.cs">
+      <DependentUpon>CUPass.cs</DependentUpon>
+    </Compile>
     <Compile Include="Especialidad.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Especialidad.Designer.cs">
       <DependentUpon>Especialidad.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Medico.cs">
       <SubType>Form</SubType>
@@ -115,6 +133,12 @@
     <Compile Include="Turno.Designer.cs">
       <DependentUpon>Turno.cs</DependentUpon>
     </Compile>
+    <Compile Include="Usuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Usuario.Designer.cs">
+      <DependentUpon>Usuario.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Clinica.resx">
       <DependentUpon>Clinica.cs</DependentUpon>
     </EmbeddedResource>
@@ -133,8 +157,17 @@
     <EmbeddedResource Include="CU3.resx">
       <DependentUpon>CU3.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CUEmail.resx">
+      <DependentUpon>CUEmail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CUPass.resx">
+      <DependentUpon>CUPass.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Especialidad.resx">
       <DependentUpon>Especialidad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Medico.resx">
       <DependentUpon>Medico.cs</DependentUpon>
@@ -156,6 +189,9 @@
     </Compile>
     <EmbeddedResource Include="Turno.resx">
       <DependentUpon>Turno.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Usuario.resx">
+      <DependentUpon>Usuario.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
